--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -6,17 +6,20 @@
 <%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js" %>
-<% javascript_tag do %>
-$(document).ready(function() {
-  $("#accordion").accordion({
-      autoHeight : false,
-      navigation : true,
-      collapsible: true,
-      header     : 'fieldset legend'
-  });
-  $("#accordion").accordion('activate',false);
-});
 <% end %>
+
+<% content_for :before_script do %>
+  <% javascript_tag do %>
+    $(document).ready(function() {
+      $(".accordion").accordion({
+        autoHeight : false,
+        navigation : true,
+        collapsible: true,
+        header     : 'fieldset legend'
+      });
+      $(".accordion").accordion('activate',false);
+    });
+  <% end %>
 <% end %>
 
 <%= javascript_include_tag :defaults %>
@@ -24,21 +27,21 @@ $(document).ready(function() {
 <div class='plugin-icon'><img src='/images/monitoring.png'/><%=_("Status")%></div>
 <div class="plugin-content grid_12">
 
-<div id="accordion">
+<div class="accordion">
 <% if @graphs  %>
   <% @graphs.each do |group| %>
     <fieldset class="wrapper with-background">
       <% if limits_reached(group) %>
-        <% status_icon = "<div class='status-icon error'></div>" %>
+        <% status_icon = "<span class='status-icon error'></span>" %>
       <% else %>
-         <% status_icon = "<div class='status-icon ok'></div>" %>
+         <% status_icon = "<span class='status-icon ok'></span>" %>
       <% end %>
       <legend>
       <%=link_to_remote status_icon + group.id, :update => graph_id(group.id, group.single_graphs.first.headline),
         :url => { :action => "evaluate_values", :group_id => group.id, :graph_id => group.single_graphs.first.headline },
         :complete => evaluate_next_graph(group.id, group.single_graphs, 1 )%>
       </legend>
-      <ul style="display: none;">
+      <div style="display: none;">
 
           <% group.single_graphs.each do |single_graph| %>
             <p>     
@@ -66,7 +69,7 @@ $(document).ready(function() {
               <%= graph(graph_id(group.id, single_graph.headline), 400, 300) %>
             </p>
           <% end %>
-      </ul>
+      </div>
     </fieldset>
   <% end %>
 <% end %>
@@ -75,7 +78,7 @@ $(document).ready(function() {
       <% default_lines=50 %>
       <% frequency=15 %>
       <legend>
-      <%=link_to_remote "<div class='status-icon ok'></div>" + log.description, 
+      <%=link_to_remote "<span class='status-icon none'></span>" + log.description, 
             :update => log_id(log.id),
             :url => { :action => "ajax_log_custom", :id => log.id, :lines => default_lines } %>
       </legend>
@@ -93,7 +96,7 @@ $(document).ready(function() {
 <fieldset>
 <%= form_back_button %> 
 <%= form_str_spacer %>
-<%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
+<%= link_to  _("Edit Limits"), '/status/edit' %>
 </fieldset>
 </div>
 
