--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -15,7 +15,6 @@
 
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
 
-  <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.validate.js"></script>
   <!-- browser detection -->
    <script type="text/javascript" charset="utf-8" src="/javascripts/jqbrowser-compressed.js"></script>
@@ -29,6 +28,8 @@
   <script type="text/javascript" charset="utf-8" src="/inc/yast.widgets.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/yast.helpers.js"></script>
   <!-- custom page scripts and css -->
+  <%= yield :before_script %>
+  <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
   <%= yield :head %>
 
   <title><%= _("WebYaST") %></title>
