--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -525,13 +525,14 @@ input[type="submit"] {
   display: block;
   width: 23px;
   height: 23px;
-  margin-right: 1em;
   background: transparent url(images/status-imagemap.png) no-repeat scroll 0 0;
   float: left;
 }
 
 .bug-icon {
   display: block;
+  position: relative;
+  top: -3px;
   width: 23px;
   height: 23px;
   background: transparent url(images/bug.png) no-repeat scroll 0 0;
@@ -554,6 +555,12 @@ input[type="submit"] {
 }
 .status-icon.optional {
   background-position: 0 -66px;
+}
+.status-icon.unused {
+  background-position: 0 -88px;
+}
+.status-icon.none {
+  background: transparent;
 }
 /* ==/Status Icons ==*/
 
