licenses: use only "License agreement" heading (bnc#586552)

--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -1,5 +1,5 @@
 <div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="eula module"/>
-<%=_("Accept End User Licence Agreement")-%> - <%= @eula.name -%>
+<%=_("Licence Agreement")-%> - <%= @eula.name -%>
 </div>
 
 <div class="plugin-content grid_12" id="eula">
