removed GID string (bnc#548785)

--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -115,7 +115,7 @@
         </p>
         <p><label id="groups-error" class="error"></label><p>
         <p>
-          <label><%=_("Default Group (GID)")%></label>
+          <label><%=_("Default Group")%></label>
           <%= f.text_field :groupname %>
         </p>
         <div id="groups" style="display:none;" title="Groups"> 
