--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -75,7 +75,7 @@
             <% last_level = @revoke_data[k][:level] %>
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
+		  <input type="checkbox" name="<%= @revoke_data[k][:path] %>" value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
             <% if k < @revoke_data.size-1 && @revoke_data[k+1][:level] == @revoke_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
@@ -87,11 +87,11 @@
             <% end %>
             <% last_level = @revoke_data[k][:level] %>
        <%= "  " * last_level %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
+		  <input type="checkbox" name="<%= @revoke_data[k][:path] %>" value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
           <% else %>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
+		  <input type="checkbox" name="<%= @revoke_data[k][:path] %>" value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
        <%= "  " * (last_level+1) %></li>
           <% end %>
@@ -115,7 +115,7 @@
             <% last_level = @grant_data[k][:level] %>
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
+		  <input type="checkbox" name="<%= @grant_data[k][:path]" %> value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
             <% if k < @grant_data.size-1 && @grant_data[k+1][:level] == @grant_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
@@ -127,11 +127,11 @@
             <% end %>
             <% last_level = @grant_data[k][:level] %>
        <%= "  " * last_level %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
+		  <input type="checkbox" name="<%= @grant_data[k][:path] %>" value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
           <% else %>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
+		  <input type="checkbox" name="<%= @grant_data[k][:path] %>" value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
        <%= "  " * (last_level+1) %></li>
           <% end %>
