--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -257,7 +257,9 @@ ul li {
     }
     
     #status-wrapper #machine-controle h4 {
-      margin: 0;
+      background-color: #ccc;
+      margin: 0.5em;
+      padding: 0.3em;
     }
     
 /* == Lists and Tables ==================================================== */
