--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -14,12 +14,14 @@
         border: #669999 2px solid;
         padding: 5px;
      }
+/*
      .GContainerUser {
         width: 100px;
      }
      .GContainerGroups {
         width: 400px;
      }
+*/
      .GBox {
         border: #000 1px solid;
         cursor: pointer;
@@ -125,8 +127,8 @@
     
         <div id="groups" style="display:none;" title="Groups"> 
           <div>
-            <div class="GContainerUser" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
-            <div class="GContainerGroups" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
+            <div class="GContainerUser" style="width: 100px;" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
+            <div class="GContainerGroups" style="width: 400px;" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
           </div>
         </div>
       </div>
