webyast-software-ui - show name instead of alias in the delete confirmation popup

--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -36,7 +36,7 @@
 	  <% unless disabled -%>
 	    <td><%= link_to image_tag('/images/delete.png', :alt => "delete"),
 	      {:action => 'delete', :id => r.id},
-	      {:confirm => _("Really delete repository '%s'?") % h(r.id), :method => :delete} %>
+	      {:confirm => _("Really delete repository '%s'?") % h(r.name), :method => :delete} %>
 	    </td>
 	  <% end -%>
 	</tr>
