Less hackerly look&feel of new hosts

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -465,8 +465,13 @@ label {
 }
 
 .dialoge-wrapper input[type="text"] {
-  width: 99%;
+  width: 25em;
 }
+
+.dialoge-wrapper label {
+  width: 5em;
+}
+
 .dialogue-footer {
   margin: 0;
   padding-top: 15px;
