--- a/webclient/app/views/hosts/new.html.erb
+++ b/webclient/app/views/hosts/new.html.erb
@@ -1,5 +1,10 @@
 <div class="dialoge-wrapper">
   <div class="dialoge-sub-wrapper">
+  <style type="text/css">
+    label.error {
+         display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; text-align: left; vertical-align: top; width: 50%
+    }
+   </style>
   
   <h2><%=_("New WebYaST Host")%></h2>
 
@@ -25,7 +30,7 @@
     <% form_for(@host) do |f| %>
       <%= f.error_messages %>
 
-      <div class="table">
+      <fieldset class="wrapper with-background">
 
         <p>
           <label for="host_name"><%=_("Name")%></label>
@@ -33,7 +38,7 @@
         </p>
 
         <p>
-          <label for="host_url"><%=_("Url")%></label>
+          <label for="host_url"><%=_("URL")%></label>
           <%= f.text_field :url %>
         </p>
 
@@ -41,12 +46,12 @@
           <label for="host_description"><%=_("Description")%></label>
           <%= f.text_field :description %>
         </p>
+      </fieldset>
 
         <p class="dialogue-footer">
           <%= link_to _('Cancel'), hosts_path, :class => "button" %>
           <%= f.submit _("Create"), :class => "button" %>
         </p>
-      </div>
     <% end %>
 
   </div>
