if there's inconsistency between enabled and running, show extra button (WIP)

--- a/plugins/services/app/views/services/_status.rhtml
+++ b/plugins/services/app/views/services/_status.rhtml
@@ -30,4 +30,5 @@ case status
 	label	= _("status unknown: %d") % status
 end
 -%>
+<%=_("Current status of the service:")%>
 <span class=<%=classname%> style="color: <%=color%>"><%=label%></span>
