--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -132,9 +132,22 @@ commands	= [ "start", "stop", "restart", ]
 
   <span class='service_status' id='service_status_<%=service.name%>'>
     <% unless service.status.nil? %>
-    <%= render :partial => 'status', :object => service.status %>
+    <%= render :partial => 'status', :locals => { :status => service.status, :enabled => service.enabled } %>
     <% end %>
   </span>
+
+  <%=
+	url	= {
+	    :controller => :services,
+	    :id		=> service.name,
+	    :action	=> :show_status,
+	    :custom	=> service.custom
+	}
+	link_to_remote _('(refresh)'), :update => "service_status_#{service.name}",
+	    :url => url,
+	    :loading  => "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
+	    :complete => "$('#service_progress_#{service.name}').hide(); toggle_service_info ('#service_status_#{service.name}'); $('#service_status_#{service.name}').show()"
+  %>
 
   <% commands.each do |cmd|
 	if @permissions[:execute] %>
@@ -152,11 +165,19 @@ commands	= [ "start", "stop", "restart", ]
 		    :custom	=> service.custom
 		}
 		html_options	= {
-		    :class	=> "button"
+		    :class	=> "button",
+		    :id		=> cmd
 		}
 		html_options[:style]	= "display: none" if (cmd == "start" && service.status == 0) || (cmd == "stop" && service.status != 0)
-		html_options[:id]	= cmd
-		link_to_remote cmd,
+
+		label = case cmd
+		  when "start" then _("Start")
+		  when "stop" then _("Stop")
+		  when "restart" then _("Restart")
+		  else cmd
+		end
+
+		link_to_remote label,
 		    :url	=> url,
 		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
 		    :complete   => remote_function(:update => "service_status_#{service.name}",
@@ -170,22 +191,65 @@ commands	= [ "start", "stop", "restart", ]
 	end
      end %>
 
-     <%=
-	url	= {
-	    :controller => :services,
-	    :id		=> service.name,
-	    :action	=> :show_status,
-	    :custom	=> service.custom
-	}
-	link_to_remote _('refresh status'), :update => "service_status_#{service.name}",
-	    :url => url,
-	    :loading  => "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
-	    :complete => "$('#service_progress_#{service.name}').hide(); toggle_service_info ('#service_status_#{service.name}'); $('#service_status_#{service.name}').show()"
-      %>
 
       <span class='service_result' id='service_result_<%=service.name%>'>
 	<%= render :partial => 'result' %>
       </span>
+
+      <!-- only show enable/disable part when there's inconsistency, and not for custom services -->
+      <% if (!service.custom?) && ((service.enabled? && service.status != 0) || (!service.enabled? && service.status == 0)) %>
+
+	<p>
+	<span class='service_enabled' id='service_enabled_<%=service.name%>'>
+	  <% unless service.enabled.nil? %>
+	  <%= render :partial => 'enabled', :object => service.enabled %>
+	  <% end %>
+	</span>
+ 
+        <%
+	if @permissions[:execute]
+	  [ "enable", "disable" ].each do |cmd|
+	%>
+	    <%=
+		url	= {
+		    :id		=> cmd, 
+		    :action	=> "execute", 
+		    :service_id	=> service.name,
+		    :custom	=> service.custom
+		}
+		status_url	= {
+		    :controler	=> :services,
+		    :action	=> :show_status,
+		    :id		=> service.name,
+		    :custom	=> service.custom
+		}
+		html_options	= {
+		    :class	=> "button",
+		    :id		=> cmd
+		}
+		html_options[:style]	= "display: none" if (cmd == "enable" && service.enabled?) || (cmd == "disable" && !service.enabled?) 
+		label = case cmd
+		  when "enable"	then _("Start on Boot")
+		  when "disable" then _("Do Not Start on Boot")
+		  else cmd
+		end
+
+		link_to_remote label,
+		    :url	=> url,
+		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
+		    :complete   => remote_function(:update => "service_status_#{service.name}",
+		        :url => status_url,
+			:complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show(); toggle_service_info ('#service_status_#{service.name}'); $('#service_result_#{service.name}').show();"
+		    ),
+		    :html	=> html_options,
+		    :update	=> "service_result_#{service.name}"
+	    %>
+	<%
+	  end
+        end
+	%>
+        </p>
+      <% end %> <!-- end of enable/disable part -->
   </div>
   </div>
 <% end %>
