--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -131,13 +131,9 @@
             <label><%=_("Default Group")%></label>
             <%= f.text_field :groupname, :disabled => disabled %>
         </p>
-    
-        <div id="groups" style="display:none;" title="Groups"> 
-          <div>
-            <div class="GContainerUser" style="width: 100px;" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
-            <div class="GContainerGroups" style="width: 400px;" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
-          </div>
-        </div>
+   
+      <%= render :partial => 'groups_dialog' %>
+
       </div>
     </fieldset>
     <fieldset id="tab_advanced" class="wrapper with-background">
