--- a/plugins/services/app/views/services/_result.rhtml
+++ b/plugins/services/app/views/services/_result.rhtml
@@ -9,10 +9,12 @@
        <td class="first" width="120"><strong><%=_("Result")%></strong></td>
        <td class="last"><%=h @error_string %></td>
    </tr>
+   <% unless @result_string.empty? %>
    <tr class="bg">
        <td class="first"><strong><%=_("Description")%></strong></td>
        <td class="last"><%=h @result_string %></td>
    </tr>
+   <% end %>
    </table>
    <p>
 </div>
