possible to select default group from list (bnc#582589)

--- a/plugins/users/app/views/users/_groups_dialog.erb
+++ b/plugins/users/app/views/users/_groups_dialog.erb
@@ -6,3 +6,11 @@
     </div>
    </div>
  </div>
+
+ <div id="def_group" style="display:none;" title="Default Group"> 
+   <div>
+    <div>
+     <div class="GContainerGroups" style="width: 400px;" id="ContainerDefaultGroup" onclick="selectItem(event);"> </div>
+    </div>
+   </div>
+ </div>
