--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -126,6 +126,7 @@
         <p>
           <label><%=_("Default Group")%></label>
           <%= f.text_field :groupname %>
+            <a href="#" class="button" onClick="open_def_group_dialog();return false;">Select Default Group</a>
         </p>
 
 	<%= render :partial => 'groups_dialog' %>
